--- a/Drought/index.html
+++ b/Drought/index.html
@@ -16,7 +16,7 @@
 </head>
 <body>
 
-  <h1>Drought Prediction & Water Demand/Supply</h1>
+  <h1>Drought Prediction and Water Demand/Supply</h1>
 
   <form id="predictForm">
     <label>City: <input type="text" id="city" required></label>
@@ -76,3 +76,4 @@
 
 </body>
 </html>
+
