--- a/Drought/index.html
+++ b/Drought/index.html
@@ -11,7 +11,7 @@
     input, button { padding: 0.5rem; font-size: 1rem; width: 100%; max-width: 400px; }
     button { margin-top: 1rem; cursor: pointer; background: #3498db; color: white; border: none; border-radius: 4px; }
     #result { margin-top: 2rem; padding: 1rem; background: #ecf0f1; border-radius: 6px; }
-    .error { color: red; }
+    .error { color: pink; }
   </style>
 </head>
 <body>
@@ -76,4 +76,5 @@
 
 </body>
 </html>
+
 
